--- a/css/type.css
+++ b/css/type.css
@@ -11,6 +11,8 @@ a {
 	-ms-transition: color 0.2s ease-in-out;
 	transition: color 0.2s ease-in-out;
 	text-decoration: none;
+	/* 1790 */
+	color: #c1c7cd;
 }
 /* 1659 */
 h1, h2, h3, h4, h5, h6 {
@@ -24,4 +26,8 @@ h1, h2, h3, h4, h5, h6 {
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	color: inherit;
 	text-decoration: none;
+}
+/* 1690 */
+h3 {
+	font-size: 1.75em;
 }
