--- a/css/list.css
+++ b/css/list.css
@@ -20,6 +20,21 @@ ul.alt li:first-child {
 	border-top: 0;
 	padding-top: 0;
 }
+/* 2491 */
+ul.icons {
+	cursor: default;
+	list-style: none;
+	padding-left: 0;
+}
+/* 2497 */
+ul.icons li {
+	display: inline-block;
+	padding: 0 1em 0 0;
+}
+/* 2506 */
+ul.icons li .icon:before {
+	font-size: 2em;
+}
 /* 2627 */
 ul.alt li {
 	border-top-color: rgba(255, 255, 255, 0.15);
