--- a/css/footer.css
+++ b/css/footer.css
@@ -18,7 +18,7 @@
 }
 /* 3794 */
 #footer .copyright .icons {
-	margin: 2em 0 0 0;
+	margin: 2em 0 1em 0;
 }
 
 @media screen and (max-width: 980px) {
