--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* Reset */
 /* 13 */
-html, body, div, span, h1, h3, a, ul, footer, header, li, nav {
+html, body, div, span, h1, h3, p, a, img, ul, caption, footer, header, li, nav, section {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -9,7 +9,7 @@ html, body, div, span, h1, h3, a, ul, footer, header, li, nav {
 	vertical-align: baseline;
 }
 /* 22 */
-footer, header, menu, nav {
+footer, header, menu, nav, section {
 	display: block;
 }
 /* 26 */
