--- a/css/type.css
+++ b/css/type.css
@@ -4,6 +4,13 @@ body {
 	background-color: #020b13;
 	color: #c0c2c4;
 }
+/* 1592 */
+body, input, select, textarea {
+	font-family: "Signika", sans-serif;
+	font-size: 13pt;
+	font-weight: 300;
+	line-height: 1.65;
+}
 /* 1639 */
 a {
 	-moz-transition: color 0.2s ease-in-out;
@@ -13,6 +20,10 @@ a {
 	text-decoration: none;
 	/* 1790 */
 	color: #c1c7cd;
+}
+/* 1655 */
+p {
+	margin: 0 0 2em 0;
 }
 /* 1659 */
 h1, h2, h3, h4, h5, h6 {
@@ -27,7 +38,15 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	color: inherit;
 	text-decoration: none;
 }
+/* 1670 */
+h2 {
+	font-size: 2.5em;
+}
 /* 1690 */
 h3 {
 	font-size: 1.75em;
+}
+/* 1778 */
+.align-center {
+	text-align: center;
 }
