メインエリア最上段のコンテンツを作成
当ページのメインエリアにて、最上段のコンテンツの作成とレイアウトの調整

--- a/css/flex.css
+++ b/css/flex.css
@@ -23,6 +23,10 @@
 	-ms-align-items: stretch;
 	align-items: stretch;
 }
+/* 2052 */
+.flex.flex-2 .col {
+	width: 48%;
+}
 /* 2056 */
 .flex.flex-3 .col {
 	width: 31%;
