メインエリア中段のジャンル選択ボタンを作成
当ページのメインエリアにて、中段の選択ボタンの作成とレイアウトの調整

--- a/css/flex.css
+++ b/css/flex.css
@@ -31,3 +31,17 @@
 .flex.flex-3 .col {
 	width: 31%;
 }
+/* 2064 */
+.flex.flex-tabs {
+	-moz-flex-wrap: nowrap;
+	-webkit-flex-wrap: nowrap;
+	-ms-flex-wrap: nowrap;
+	flex-wrap: nowrap;
+}
+
+@media screen and (max-width: 980px) {
+	/* 2085 */
+	.flex.flex-tabs ul {
+		width: 30%;
+	}
+}
