--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -48,6 +48,28 @@
 .wrapper.style1 header p {
 	color: #9ba6af;
 }
+/* 3043 */
+.wrapper.style2 {
+	background-color: #041625;
+	color: #c0c5c9;
+}
+/* 3052 */
+.wrapper.style2 a {
+	color: #c1c7cd;
+}
+/* 3064 */
+.wrapper.style2 h1,
+.wrapper.style2 h2,
+.wrapper.style2 h3,
+.wrapper.style2 h4,
+.wrapper.style2 h5,
+.wrapper.style2 h6 {
+	color: #ffffff;
+}
+/* 3227 */
+.wrapper.style2 header p {
+	color: #9ba2a8;
+}
 
 @media screen and (max-width: 1280px) {
 	/* 3257 */
