--- a/css/menu.css
+++ b/css/menu.css
@@ -96,3 +96,10 @@
 	box-shadow: 0 0 1.5em 0 rgba(0, 0, 0, 0.2);
 	visibility: visible;
 }
+
+@media screen and (max-width: 736px) {
+	/* 3616 */
+	#menu {
+		padding: 2.5em 1.75em;
+	}
+}
