--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -30,6 +30,14 @@
 .wrapper header {
 	margin-bottom: 4em;
 }
+
+@media screen and (max-width: 736px) {
+	/* 2825 */
+	.wrapper header {
+		margin-bottom: 2em;
+	}
+}
+
 /* 2831 */
 .wrapper.style1 {
 	background-color: #062038;
@@ -82,5 +90,11 @@
 	/* 3265 */
 	.wrapper > .inner {
 		width: 90%;
+	}
+}
+
+@media screen and (max-width: 736px) {
+	.wrapper {
+		padding: 3em 0 1em 0;
 	}
 }
