--- a/css/tab.css
+++ b/css/tab.css
@@ -25,6 +25,10 @@ ul.tab-list li a:hover {
 	background: #693dcc;
 	color: #ffffff !important;
 }
+/* 2691 */
+.tab {
+	display: none;
+}
 /* 2695 */
 .tab.active {
 	display: -ms-flexbox;
