FontAwesomeアイコンの位置を中央に設定
FontAwesomeアイコンの位置を上下左右共に中央に来るよう位置を調整

--- a/css/video.css
+++ b/css/video.css
@@ -50,6 +50,12 @@
 	vertical-align: middle;
 	color: rgba(255, 255, 255, 0.5);
 }
+/* Original */
+.icon_area {
+	position: absolute;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
 /* 3342 */
 .video .caption {
 	color: #c0c5c9;
